--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -1,1 +1,12 @@
-<p>graficas1 works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <div style="display: block">
+                    <!-- <canvas baseChart [data]="ChartData" [labels]="ChartLabel" [type]="type">
+                    </canvas> -->
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
